whole bunch of stuff

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@gnaudio/jabra-js": "^4.2.2",
+    "@gnaudio/jabra-node-sdk": "^3.6.2",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -21,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "internal-ip": "7.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
@@ -30,6 +34,7 @@
     "react-dom": "^18",
     "react-phone-number-input": "^3.4.3",
     "recharts": "^2.12.7",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.2.0",
