--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "beta",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
