--- a/package.json
+++ b/package.json
@@ -27,7 +27,14 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@stream-io/video-react-sdk": "^1.2.13",
+    "@tiptap/extension-list-item": "^2.5.5",
+    "@tiptap/extension-ordered-list": "^2.5.5",
+    "@tiptap/extension-placeholder": "^2.5.5",
+    "@tiptap/pm": "^2.5.5",
+    "@tiptap/react": "^2.5.5",
+    "@tiptap/starter-kit": "^2.5.5",
     "@twilio/voice-sdk": "^2.11.2",
+    "@vercel/kv": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -42,6 +49,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-phone-number-input": "^3.4.3",
+    "react-textarea-autosize": "^8.5.3",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "sonner": "^1.5.0",
