--- a/package.json
+++ b/package.json
@@ -12,28 +12,29 @@
     "@gnaudio/jabra-js": "^4.2.2",
     "@gnaudio/jabra-node-sdk": "^3.6.2",
     "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@stream-io/video-react-sdk": "^1.2.13",
-    "@tiptap/extension-list-item": "^2.5.5",
-    "@tiptap/extension-ordered-list": "^2.5.5",
-    "@tiptap/extension-placeholder": "^2.5.5",
-    "@tiptap/pm": "^2.5.5",
-    "@tiptap/react": "^2.5.5",
-    "@tiptap/starter-kit": "^2.5.5",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@stream-io/video-react-sdk": "^1.2.17",
+    "@tiptap/extension-list-item": "^2.5.7",
+    "@tiptap/extension-ordered-list": "^2.5.7",
+    "@tiptap/extension-placeholder": "^2.5.7",
+    "@tiptap/pm": "^2.5.7",
+    "@tiptap/react": "^2.5.7",
+    "@tiptap/starter-kit": "^2.5.7",
     "@twilio/voice-sdk": "^2.11.2",
+    "@vercel/edge-config": "^1.2.1",
     "@vercel/kv": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -45,29 +46,30 @@
     "next": "14.2.4",
     "next-auth": "beta",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
-    "react-phone-number-input": "^3.4.3",
+    "react-dom": "^18.3.1",
+    "react-phone-number-input": "^3.4.4",
     "react-resizable-panels": "^2.0.22",
     "react-textarea-autosize": "^8.5.3",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.2.0",
-    "twilio-taskrouter": "^2.0.6"
+    "twilio": "^5.2.2",
+    "twilio-taskrouter": "^2.0.7",
+    "vercel": "^35.2.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^9.6.0",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^20.14.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.8.0",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   }
 }
