--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gnaudio/jabra-node-sdk": "^3.6.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -27,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@stream-io/video-react-sdk": "^1.2.17",
+    "@tanstack/react-table": "^8.19.3",
     "@tiptap/extension-list-item": "^2.5.7",
     "@tiptap/extension-ordered-list": "^2.5.7",
     "@tiptap/extension-placeholder": "^2.5.7",
