--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.2.2",
     "twilio-taskrouter": "^2.0.7",
-    "vercel": "^35.2.1"
+    "vercel": "^35.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
