added necessary packages

--- a/package.json
+++ b/package.json
@@ -1,79 +1,84 @@
 {
-  "name": "call-center",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@gnaudio/jabra-js": "^4.2.2",
-    "@gnaudio/jabra-node-sdk": "^3.6.2",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@stream-io/video-react-sdk": "^1.2.17",
-    "@tanstack/react-table": "^8.19.3",
-    "@tiptap/extension-list-item": "^2.5.7",
-    "@tiptap/extension-ordered-list": "^2.5.7",
-    "@tiptap/extension-placeholder": "^2.5.7",
-    "@tiptap/pm": "^2.5.7",
-    "@tiptap/react": "^2.5.7",
-    "@tiptap/starter-kit": "^2.5.7",
-    "@twilio/voice-sdk": "^2.11.2",
-    "@vercel/edge-config": "^1.2.1",
-    "@vercel/kv": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
-    "internal-ip": "7.0.0",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.407.0",
-    "next": "14.2.4",
-    "next-auth": "beta",
-    "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-phone-number-input": "^3.4.4",
-    "react-resizable-panels": "^2.0.22",
-    "react-textarea-autosize": "^8.5.3",
-    "recharts": "^2.12.7",
-    "recoil": "^0.7.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.2.2",
-    "twilio-taskrouter": "^2.0.7",
-    "vercel": "^35.2.1",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^20.14.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
-  }
+	"name": "call-center",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@gnaudio/jabra-js": "^4.2.2",
+		"@gnaudio/jabra-node-sdk": "^3.6.2",
+		"@radix-ui/react-accordion": "^1.2.0",
+		"@radix-ui/react-avatar": "^1.1.0",
+		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-collapsible": "^1.1.0",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.1",
+		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-radio-group": "^1.2.0",
+		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slider": "^1.2.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.2",
+		"@react-querybuilder/dnd": "^7.6.1",
+		"@stream-io/video-react-sdk": "^1.2.17",
+		"@tailwindcss/typography": "^0.5.13",
+		"@tanstack/react-table": "^8.19.3",
+		"@tiptap/extension-list-item": "^2.5.7",
+		"@tiptap/extension-mention": "^2.5.8",
+		"@tiptap/extension-ordered-list": "^2.5.7",
+		"@tiptap/extension-placeholder": "^2.5.7",
+		"@tiptap/pm": "^2.5.7",
+		"@tiptap/react": "^2.5.7",
+		"@tiptap/starter-kit": "^2.5.7",
+		"@twilio/voice-sdk": "^2.11.2",
+		"@vercel/edge-config": "^1.2.1",
+		"@vercel/kv": "^2.0.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
+		"date-fns": "^3.6.0",
+		"internal-ip": "7.0.0",
+		"lodash": "^4.17.21",
+		"lucide-react": "^0.407.0",
+		"next": "14.2.4",
+		"next-auth": "beta",
+		"next-themes": "^0.3.0",
+		"react": "^18.3.1",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "^18.3.1",
+		"react-phone-number-input": "^3.4.4",
+		"react-querybuilder": "^7.6.1",
+		"react-resizable-panels": "^2.0.22",
+		"react-textarea-autosize": "^8.5.3",
+		"recharts": "^2.12.7",
+		"recoil": "^0.7.7",
+		"sonner": "^1.5.0",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7",
+		"twilio": "^5.2.2",
+		"twilio-taskrouter": "^2.0.7",
+		"vercel": "^35.2.1",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.17.7",
+		"@types/node": "^20.14.12",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"eslint": "^9.8.0",
+		"eslint-config-next": "14.2.4",
+		"postcss": "^8.4.40",
+		"tailwindcss": "^3.4.7",
+		"typescript": "^5.5.4"
+	}
 }
