whole lot of data

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gnaudio/jabra-js": "^4.2.2",
     "@gnaudio/jabra-node-sdk": "^3.6.2",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -30,16 +31,16 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-querybuilder/dnd": "^7.6.1",
-    "@stream-io/video-react-sdk": "^1.2.17",
+    "@stream-io/video-react-sdk": "^1.2.20",
     "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-table": "^8.19.3",
-    "@tiptap/extension-list-item": "^2.5.7",
+    "@tanstack/react-table": "^8.20.1",
+    "@tiptap/extension-list-item": "^2.5.8",
     "@tiptap/extension-mention": "^2.5.8",
-    "@tiptap/extension-ordered-list": "^2.5.7",
-    "@tiptap/extension-placeholder": "^2.5.7",
-    "@tiptap/pm": "^2.5.7",
-    "@tiptap/react": "^2.5.7",
-    "@tiptap/starter-kit": "^2.5.7",
+    "@tiptap/extension-ordered-list": "^2.5.8",
+    "@tiptap/extension-placeholder": "^2.5.8",
+    "@tiptap/pm": "^2.5.8",
+    "@tiptap/react": "^2.5.8",
+    "@tiptap/starter-kit": "^2.5.8",
     "@twilio/voice-sdk": "^2.11.2",
     "@vercel/edge-config": "^1.2.1",
     "@vercel/kv": "^2.0.0",
@@ -50,13 +51,13 @@
     "internal-ip": "7.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.407.0",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "next-auth": "beta",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-phone-number-input": "^3.4.4",
+    "react-phone-number-input": "^3.4.5",
     "react-querybuilder": "^7.6.1",
     "react-resizable-panels": "^2.0.22",
     "react-textarea-autosize": "^8.5.3",
@@ -68,17 +69,18 @@
     "twilio": "^5.2.2",
     "twilio-sync": "^3.3.3",
     "twilio-taskrouter": "^2.0.7",
-    "vercel": "^35.2.1",
+    "use-debounce": "^10.0.2",
+    "vercel": "^35.2.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
-    "@types/node": "^20.14.12",
+    "@types/node": "^20.14.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^9.8.0",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.41",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   }
