--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-markdown": "^0.8.10",
     "twilio": "^5.2.2",
     "twilio-sync": "^3.3.3",
     "twilio-taskrouter": "^2.0.7",
