--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -46,16 +45,15 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.407.0",
+    "lucide-react": "^0.427.0",
     "next": "^14.2.5",
     "next-auth": "beta",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-phone-number-input": "^3.4.5",
-    "react-querybuilder": "^7.6.1",
     "react-resizable-panels": "^2.0.22",
     "react-textarea-autosize": "^8.5.3",
     "recharts": "^2.12.7",
@@ -68,16 +66,16 @@
     "twilio-sync": "^3.3.3",
     "twilio-taskrouter": "^2.0.7",
     "use-debounce": "^10.0.2",
-    "vercel": "^35.2.3",
+    "vercel": "^36.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
-    "@types/node": "^20.14.14",
+    "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^9.9.0",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
