--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"typeGen": "bunx supabase gen types typescript --project-id 'qqfkxhqzsbqgydssvfss' --schema reporting > types/supabase.ts"
 	},
 	"dependencies": {
 		"@auth/supabase-adapter": "^1.4.2",
@@ -54,7 +55,7 @@
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"twilio": "^5.2.2",
-		"twilio-taskrouter": "^2.0.7",
+		"twilio-taskrouter": "^2.0.10",
 		"vercel": "^36.0.0",
 		"zod": "^3.23.8"
 	},
