--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.45.1",
+    "@tanstack/react-query": "^5.53.1",
     "@tanstack/react-table": "^8.20.1",
     "@twilio/voice-sdk": "^2.11.2",
     "@vercel/edge-config": "^1.2.1",
