--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.2.2",
+    "twilio-sync": "^3.3.5",
     "twilio-taskrouter": "^2.0.10",
     "vercel": "^36.0.0",
     "zod": "^3.23.8"
