--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.45.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.53.1",
     "@tanstack/react-table": "^8.20.5",
     "@tiptap/pm": "^2.7.2",
@@ -59,6 +60,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-markdown": "^0.8.10",
     "twilio": "^5.2.2",
     "twilio-sync": "^3.3.5",
     "twilio-taskrouter": "^2.0.11",
