--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "faker": "^6.6.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.441.0",
-    "next": "^14.2.13",
+    "next": "^15.0.0-rc.0",
     "next-themes": "^0.3.0",
-    "react": "^18.3.1",
+    "react": "^19.0.0-rc-d8c90fa4-20241001",
     "react-day-picker": "^9.0.8",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0-rc-d8c90fa4-20241001",
     "react-hook-form": "^7.52.2",
     "react-phone-number-input": "^3.4.5",
     "react-resizable-panels": "^2.0.22",
