--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tiptap/starter-kit": "^2.7.2",
     "@twilio/rtc-diagnostics": "^1.0.1",
     "@twilio/voice-sdk": "^2.12.1",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/edge-config": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
