--- a/package.json
+++ b/package.json
@@ -1,88 +1,88 @@
 {
-	"name": "call-center",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"typeGen": "bunx supabase gen types typescript --project-id 'qqfkxhqzsbqgydssvfss' --schema public,reporting > types/supabase.ts"
-	},
-	"dependencies": {
-		"@auth/supabase-adapter": "^1.4.2",
-		"@gnaudio/jabra-js": "^4.2.2",
-		"@hookform/resolvers": "^3.9.0",
-		"@radix-ui/react-accordion": "^1.2.0",
-		"@radix-ui/react-alert-dialog": "^1.1.1",
-		"@radix-ui/react-avatar": "^1.1.0",
-		"@radix-ui/react-checkbox": "^1.1.1",
-		"@radix-ui/react-collapsible": "^1.1.0",
-		"@radix-ui/react-context-menu": "^2.2.2",
-		"@radix-ui/react-dialog": "^1.1.1",
-		"@radix-ui/react-dropdown-menu": "^2.1.1",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-popover": "^1.1.1",
-		"@radix-ui/react-progress": "^1.1.0",
-		"@radix-ui/react-radio-group": "^1.2.0",
-		"@radix-ui/react-scroll-area": "^1.1.0",
-		"@radix-ui/react-select": "^2.1.1",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-switch": "^1.1.0",
-		"@radix-ui/react-tabs": "^1.1.0",
-		"@radix-ui/react-tooltip": "^1.1.2",
-		"@supabase/ssr": "^0.4.0",
-		"@supabase/supabase-js": "^2.45.1",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tanstack/react-query": "^5.53.1",
-		"@tanstack/react-table": "^8.20.5",
-		"@tiptap/pm": "^2.7.2",
-		"@tiptap/react": "^2.7.2",
-		"@tiptap/starter-kit": "^2.7.2",
-		"@twilio/rtc-diagnostics": "^1.0.1",
-		"@twilio/voice-sdk": "^2.12.1",
+  "name": "call-center",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbo",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "typeGen": "bunx supabase gen types typescript --project-id 'qqfkxhqzsbqgydssvfss' --schema public,reporting > types/supabase.ts"
+  },
+  "dependencies": {
+    "@auth/supabase-adapter": "^1.4.2",
+    "@gnaudio/jabra-js": "^4.2.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-context-menu": "^2.2.2",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.1",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query": "^5.53.1",
+    "@tanstack/react-table": "^8.20.5",
+    "@tiptap/pm": "^2.7.2",
+    "@tiptap/react": "^2.7.2",
+    "@tiptap/starter-kit": "^2.7.2",
+    "@twilio/rtc-diagnostics": "^1.0.1",
+    "@twilio/voice-sdk": "^2.12.1",
     "@vercel/analytics": "^1.3.1",
-		"@vercel/edge-config": "^1.2.1",
-		"babel-plugin-react-compiler": "^0.0.0-experimental-b4db8c3-20241001",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"cmdk": "^1.0.0",
-		"date-fns": "^3.6.0",
-		"faker": "^6.6.6",
-		"lodash": "^4.17.21",
-		"lucide-react": "^0.441.0",
-		"next": "^15.0.0-rc.0",
-		"next-themes": "^0.3.0",
-		"react": "^19.0.0-rc-d8c90fa4-20241001",
-		"react-day-picker": "^9.0.8",
-		"react-dom": "^19.0.0-rc-d8c90fa4-20241001",
-		"react-hook-form": "^7.52.2",
-		"react-phone-number-input": "^3.4.5",
-		"react-resizable-panels": "^2.0.22",
-		"react-textarea-autosize": "^8.5.3",
-		"sonner": "^1.5.0",
-		"tailwind-merge": "^2.4.0",
-		"tailwindcss-animate": "^1.0.7",
-		"tiptap-markdown": "^0.8.10",
-		"twilio": "^5.2.2",
-		"twilio-sync": "^3.3.5",
-		"twilio-taskrouter": "^2.0.11",
-		"use-debounce": "^10.0.3",
-		"vercel": "^36.0.0",
-		"zod": "^3.23.8"
-	},
-	"devDependencies": {
-		"@faker-js/faker": "^8.4.1",
-		"@tanstack/react-query-devtools": "^5.54.1",
-		"@types/lodash": "^4.17.7",
-		"@types/node": "^22.3.0",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"eslint": "^9.9.0",
-		"eslint-config-next": "^14.2.5",
-		"postcss": "^8.4.41",
-		"tailwindcss": "^3.4.7",
-		"typescript": "^5.5.4"
-	}
+    "@vercel/edge-config": "^1.2.1",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-734b737-20241003",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "faker": "^6.6.6",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.441.0",
+    "next": "^15.0.0-rc.0",
+    "next-themes": "^0.3.0",
+    "react": "^19.0.0-rc-d8c90fa4-20241001",
+    "react-day-picker": "^9.0.8",
+    "react-dom": "^19.0.0-rc-d8c90fa4-20241001",
+    "react-hook-form": "^7.52.2",
+    "react-phone-number-input": "^3.4.5",
+    "react-resizable-panels": "^2.0.22",
+    "react-textarea-autosize": "^8.5.3",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tiptap-markdown": "^0.8.10",
+    "twilio": "^5.2.2",
+    "twilio-sync": "^3.3.5",
+    "twilio-taskrouter": "^2.0.11",
+    "use-debounce": "^10.0.3",
+    "vercel": "^36.0.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@tanstack/react-query-devtools": "^5.54.1",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^22.3.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.9.0",
+    "eslint-config-next": "^14.2.5",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
+  }
 }
