--- a/package.json
+++ b/package.json
@@ -31,15 +31,27 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.53.1",
     "@tanstack/react-table": "^8.20.5",
-    "@tiptap/pm": "^2.7.2",
-    "@tiptap/react": "^2.7.2",
-    "@tiptap/starter-kit": "^2.7.2",
+    "@tiptap/core": "^2.9.0",
+    "@tiptap/extension-code-block-lowlight": "^2.9.0",
+    "@tiptap/extension-color": "^2.9.0",
+    "@tiptap/extension-heading": "^2.9.0",
+    "@tiptap/extension-horizontal-rule": "^2.9.0",
+    "@tiptap/extension-image": "^2.9.0",
+    "@tiptap/extension-link": "^2.9.0",
+    "@tiptap/extension-placeholder": "^2.9.0",
+    "@tiptap/extension-text-style": "^2.9.0",
+    "@tiptap/extension-typography": "^2.9.0",
+    "@tiptap/pm": "^2.9.0",
+    "@tiptap/react": "^2.9.0",
+    "@tiptap/starter-kit": "^2.9.0",
     "@twilio/rtc-diagnostics": "^1.0.1",
     "@twilio/voice-sdk": "^2.12.1",
     "@vercel/analytics": "^1.3.1",
@@ -51,6 +63,7 @@
     "date-fns": "^4.1.0",
     "faker": "^6.6.6",
     "lodash": "^4.17.21",
+    "lowlight": "^3.1.0",
     "lucide-react": "^0.453.0",
     "next": "^15.0.0-rc.1",
     "next-themes": "^0.3.0",
@@ -58,6 +71,7 @@
     "react-day-picker": "^9.0.8",
     "react-dom": "^19.0.0-rc-83825814-20241015",
     "react-hook-form": "^7.52.2",
+    "react-medium-image-zoom": "^5.2.10",
     "react-phone-number-input": "^3.4.5",
     "react-resizable-panels": "^2.0.22",
     "react-textarea-autosize": "^8.5.3",
