--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@twilio/voice-sdk": "^2.12.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/edge-config": "^1.2.1",
+    "@vercel/functions": "^1.4.2",
     "babel-plugin-react-compiler": "^19.0.0-beta-9ee70a1-20241017",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -52,11 +53,11 @@
     "faker": "^6.6.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
-    "next": "^15.0.0-rc.1",
+    "next": "15.0.0",
     "next-themes": "^0.3.0",
-    "react": "^19.0.0-rc-83825814-20241015",
+    "react": "19.0.0-rc-65a56d0e-20241020",
     "react-day-picker": "^9.0.8",
-    "react-dom": "^19.0.0-rc-83825814-20241015",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-hook-form": "^7.52.2",
     "react-phone-number-input": "^3.4.5",
     "react-resizable-panels": "^2.0.22",
@@ -77,12 +78,16 @@
     "@tanstack/react-query-devtools": "^5.54.1",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.3.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "eslint": "^9.9.0",
     "eslint-config-next": "^14.2.5",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
