--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "faker": "^6.6.6",
+    "jssha": "^3.3.1",
     "lodash": "^4.17.21",
     "lowlight": "^3.1.0",
     "lucide-react": "^0.453.0",
