--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tiptap/starter-kit": "^2.9.0",
     "@twilio/rtc-diagnostics": "^1.0.1",
     "@twilio/voice-sdk": "^2.12.1",
+    "@types/jsonwebtoken": "^9.0.7",
     "@vercel/analytics": "^1.3.1",
     "@vercel/edge-config": "^1.2.1",
     "@vercel/functions": "^1.4.2",
@@ -63,6 +64,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "faker": "^6.6.6",
+    "jsonwebtoken": "^9.0.2",
     "jssha": "^3.3.1",
     "lodash": "^4.17.21",
     "lowlight": "^3.1.0",
