--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.1",
     "@tailwindcss/typography": "^0.5.15",
@@ -68,17 +68,18 @@
     "jssha": "^3.3.1",
     "lodash": "^4.17.21",
     "lowlight": "^3.1.0",
-    "lucide-react": "^0.454.0",
+    "lucide-react": "^0.460.0",
     "next": "15.0.0",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-day-picker": "^9.0.8",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-hook-form": "^7.52.2",
     "react-medium-image-zoom": "^5.2.10",
     "react-phone-number-input": "^3.4.5",
     "react-resizable-panels": "^2.0.22",
     "react-textarea-autosize": "^8.5.3",
+    "recharts": "^2.13.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
